--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" type = "text/css" href="/assets/css/burger_style.css" />
-		<title>Burger Time!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/app.js"></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="/public/assets/css/style.css" />
+	<title>Argue with strangers online!</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/assets/js/app.js"></script>
+</head>
+
+<body>
+	{{{ body }}}
+</body>
+
 </html>
