--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="/public/assets/css/style.css" />
 	<title>Argue with strangers online!</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/assets/js/app.js"></script>
+	<script src="/public/assets/js/app.js"></script>
 </head>
 
 <body>
