broken for debug

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("/public/assets/img/linedpaper.png");
-    background-size: cover;
+    background-image: url("/assets/img/linedpaper.png");
+    background-size: auto;
 }
