--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,4 +3,7 @@
   <p class="lead">View and save recent New York Times articles, and leave notes and comments on your favorites.</p>
   <a class="btn btn-primary btn-lg" href="#" role="button">Scrape New Articles!</a>
 </div>
-
+<h2> Recent Headlines</h2>
+<br>
+<div id="articles">
+</div>
