--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -3,3 +3,6 @@
   <p class="lead">View and save recent New York Times articles, and leave notes and comments on your favorites.</p>
   <a class="btn btn-primary btn-lg" href="#" role="button">Scrape New Articles!</a>
 </div>
+
+<h2>saved articles</h2>
+<div id="saved-articles"></div>
