--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1 class="display-4">Here For The Comments</h1>
   <p class="lead">View and save recent New York Times articles, and leave notes and comments on your favorites.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Scrape New Articles!</a>
+  <a class="btn btn-primary btn-lg scrape" role="button">Scrape New Articles!</a>
 </div>
 <h2> Recent Headlines</h2>
 <br>
